# sshs

./: README.md  install.sh  pyproject.toml  uninstall.sh
sshs/: main.py
