[tool.poetry]
name = "sshs"
version = "0.1.0"
description = ""
authors = ["seoly0 <seoly0.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
paramiko = "^3.5.0"

[tool.poetry.scripts]
sshs = "sshs.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
